--- a/Paginas/about/about.html
+++ b/Paginas/about/about.html
@@ -22,7 +22,10 @@
                 <button class="boton" id="btnMenu">
                     <i class="bi bi-list"></i>
                 </button> 
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>   
+                <a href="../../index.html" class="logo link_logo">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                </a>   
             </div>
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
@@ -43,12 +46,9 @@
             </div>
             <div class="description_about">
                 <h2 class="title_about">Ivana Guardamaña</h2>
-                <p class="text_about">Soy diseñadora industrial y UX/UI. Me desarollé desde el diseño y marketing digital, y trabajo de manera freelancer.
-                    Detallista, inquieta y con ganas de nuevos desafíos. Tengo una gran predisposición para seguir aprendiendo, creciendo y desarrollando nuevas habilidades.
+                <p class="text_about">Soy diseñadora industrial y UX/UI. Me desarrollé desde el diseño y marketing digital, y actualmente, me encuentro trabajando de manera freelancer. Detallista, inquieta y con ganas de nuevos desafíos. Tengo una gran predisposición para seguir aprendiendo, creciendo y desarrollando nuevas habilidades.
                     <br>
-                    Como diseñadora industrial busco resaltar la esencia de cada marca o empresa para la que estoy trabajando, para que así pueda conectar con su público objetivo.
-                    <br>
-                    Y como diseñadora UX/UI busco que cada pieza esté pensado para la mejor experiencia que el usuario se pueda llevar.
+                    Como diseñadora industrial busco resaltar la esencia de cada marca o empresa con las que trabajo, con el fin de que pueda conectar con su público objetivo.
                 </p>
             </div>
         </section>
@@ -182,7 +182,10 @@
                 <button class="boton" id="btnMenu">
                     <i class="bi bi-list"></i>
                 </button> 
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>   
+                <a href="../../index.html" class="logo link_logo">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                </a>   
             </div>   
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
