--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -13,7 +13,7 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="../../scss/styles.css">
 </head>
 <body onload="checkStatusPro()">
     <header class="header spanish">
@@ -22,21 +22,21 @@
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
-                <a href="../../index.html" class="logo nav_link">
+                <a href="../../index.html" class="logo link_logo">
                     <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
                     <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                 </a>
             </div>
-                    <ul class="navbarList" id="navbar">
-                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
-                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
-                        <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu nav_linkMenu__active">PROJECTS</a></li>
-                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
-                        <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
-                        <button class="btn_idioma" id="btn_ingles" onclick="checkStatusPro()">
-                            <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
-                        </button>
-                    </ul>
+                <ul class="navbarList" id="navbar">
+                    <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
+                    <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
+                    <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu nav_linkMenu__active">PROYECTOS</a></li>
+                    <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
+                    <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
+                    <button class="btn_idioma" id="btn_ingles" onclick="checkStatusPro()">
+                        <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
+                    </button>
+                </ul>
             </nav>
     </header>
     <main class="spanish">
@@ -245,13 +245,11 @@
                     <button class="boton" id="boton_menu">
                         <i class="bi bi-list"></i>
                     </button>    
-                    <a href="../../index.html" class="logo nav_link">
+                    <a href="../../index.html" class="logo link_logo">
                         <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
                         <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                     </a>
                 </div>
-
-
                         <ul class="navbarList" id="navbar">
                             <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
                             <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
