--- a/Paginas/services/services.html
+++ b/Paginas/services/services.html
@@ -22,7 +22,9 @@
                 <button class="boton" id="btnMenu">
                     <i class="bi bi-list"></i>
                 </button>
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a> 
+                <a href="../../index.html" class="logo link_logo">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a> 
             </div>
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
@@ -37,7 +39,7 @@
             </nav>
     </header>
     <main class="spanish">
-        <section class="sectionAll">
+        <section class="sectionAllServ">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
                     <li class="linkSidebar" id="branding_esp">BRANDING</li>
@@ -68,9 +70,9 @@
                                 <img class="imagen_Servicios" src="../../img/img-services.png" alt="imagen servicios">
                             </div>
                             <div class="back_red"></div>
+                            <button class="botonservicios_resp">VER PROYECTOS</button>
                         </div>
                     </div>
-
             </section>
             <section class="sectionServicios2 sectDigital" id="spanish">
                 <div class="title_Servicios">
@@ -95,6 +97,7 @@
                             <img class="imagen_Servicios" src="../../img/img-serv_digital.png" alt="">
                         </div>
                         <div class="back_red"></div>
+                        <button class="botonservicios_resp">VER PROYECTOS</button>
                     </div>
                 </div>
             </section>
@@ -122,6 +125,7 @@
                             <img class="imagen_Servicios" src="../../img/img-serv_com.png" alt="">
                         </div>
                         <div class="back_red"></div>
+                        <button class="botonservicios_resp">VER PROYECTOS</button>
                     </div>
                 </div>
             </section>
@@ -189,11 +193,13 @@
                 <button class="boton" id="btnMenu">
                     <i class="bi bi-list"></i>
                 </button>
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a> 
+                <a href="../../index.html" class="logo link_logo">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a> 
             </div>  
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
-                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn   nav_linkMenu__active">SERVICES</a></li>
+                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu nav_linkMenu__active">SERVICES</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
@@ -204,7 +210,7 @@
             </nav>
     </header>
     <main class="english">
-        <section class="sectionAll">
+        <section class="sectionAllServ">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
                     <li class="linkSidebar" id="branding_ing">BRANDING</li>
@@ -235,6 +241,7 @@
                                 <img class="imagen_Servicios" src="../../img/img-services.png" alt="imagen servicios">
                             </div>
                             <div class="back_red"></div>
+                            <button class="botonservicios_resp">VER PROYECTOS</button>
                         </div>
                     </div>
             </section>
@@ -261,6 +268,7 @@
                             <img class="imagen_Servicios" src="../../img/img-serv_digital.png" alt="">
                         </div>
                         <div class="back_red"></div>
+                        <button class="botonservicios_resp">VER PROYECTOS</button>
                     </div>
                 </div>
             </section>
@@ -288,6 +296,7 @@
                             <img class="imagen_Servicios" src="../../img/img-serv_com.png" alt="">
                         </div>
                         <div class="back_red"></div>
+                        <button class="botonservicios_resp">VER PROYECTOS</button>
                     </div>
                 </div>
             </section>
