--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -22,11 +22,14 @@
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>  
+                <a href="../../index.html" class="logo link_logo">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                </a>  
             </div>
                     <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
-                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICIOS</a></li>
+                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACTO</a></li>
@@ -36,7 +39,6 @@
                     </ul>   
             </nav>
     </header>
-
     <main class="spanish contact">
         <section class="form__floatLeft">
             <p class="pre-title">Trabajemos en equipo y potenciemos tu negocio... ¿Estás listo?</p>
@@ -120,7 +122,10 @@
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>  
+                <a href="../../index.html" class="logo link_logo">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                </a>  
             </div>
                     <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
