--- a/index.html
+++ b/index.html
@@ -24,20 +24,21 @@
                 <button class="boton" id="nav_esp">
                     <i class="bi bi-list"></i>
                 </button>  
-                <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo">
+                <a href="./index.html" class="logo link_logo">
+                    <img src="./img/Component 1.svg" class="logo_svg" alt="logo">
                     <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                 </a>
             </div>
-                    <ul class="navbarList" id="navbar">
-                        <li class="nav_item"><a href="./index.html" class="nav_link nav_linkMenu nav_linkMenu__active">INICIO</a></li>
-                        <li class="nav_item"><a href="./Paginas/services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
-                        <li class="nav_item"><a href="./Paginas/projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
-                        <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
-                        <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
-                        <button class="btn_idioma" id="btn_ingles">
-                            <span><img class="ingles_img" src="./img/flag-england.png" alt="ingles"></span>
-                        </button>
-                    </ul>
+                <ul class="navbarList" id="navbar">
+                    <li class="nav_item"><a href="./index.html" class="nav_link nav_linkMenu nav_linkMenu__active">INICIO</a></li>
+                    <li class="nav_item"><a href="./Paginas/services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
+                    <li class="nav_item"><a href="./Paginas/projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
+                    <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
+                    <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
+                    <button class="btn_idioma" id="btn_ingles">
+                        <span><img class="ingles_img" src="./img/flag-england.png" alt="ingles"></span>
+                    </button>
+                </ul>
         </nav>
     </header>
     <main class="main_top spanish">
@@ -45,12 +46,10 @@
             <div class="sectionHola">
                 <h2 class="hola">¡HOLA!</h2>
                 <h4 class="hola2">Mi nombre es Ivana</h4>
-                <P>Soy diseñadora industrial y UX/UI. Mi perfil laboral lo fui desarrollando 
-                desde el área de marketing y diseño digital. Donde encontré la manera
-                de fusionar todo lo que más me apasiona hacer. <br>
-                Mi distinción es mi enfoque en el campo de la investigación, análisis y el 
-                desarrollo de estrategias creativas, poniendo como principal protagonista
-                al usuario. Para así, poder brindarle, la mejor experiencia
+                <P>Soy diseñadora industrial y UX/UI. Mi perfil laboral lo fui desarrollando en el área del marketing y diseño digital.
+                Donde encontré la manera de fusionar todo lo que más me apasiona hacer.
+                Mi distinción es el enfoque en el campo de la investigación, el análisis y el desarrollo de estrategias creativas,
+                poniendo como principal protagonista al usuario y de esta manera, poder brindarle la mejor experiencia.
                 </P>
                 <a href="./Paginas/about/about.html"><button class="btnSection1">LEE MAS SOBRE MI</button></a>
             </div>
@@ -175,20 +174,21 @@
                 <button class="boton" id="nav_esp">
                     <i class="bi bi-list"></i>
                 </button>  
-                <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo">
+                <a href="./index.html" class="logo link_logo">
+                    <img src="./img/Component 1.svg" class="logo_svg" alt="logo">
                     <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                 </a>
             </div>   
-                    <ul class="navbarList" id="navbar">
-                        <li class="nav_item"><a href="./index.html" class="nav_link nav_linkMenu nav_linkMenu__active">HOME</a></li>
-                        <li class="nav_item"><a href="./Paginas/services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
-                        <li class="nav_item"><a href="./Paginas/projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
-                        <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
-                        <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
-                        <button class="btn_idioma" id="btn_español">
-                            <span><img class="español_img" src="./img/flag3-spain-removebg-preview.png" alt="español"></span>
-                        </button>
-                    </ul>
+                <ul class="navbarList" id="navbar">
+                    <li class="nav_item"><a href="./index.html" class="nav_link nav_linkMenu nav_linkMenu__active">HOME</a></li>
+                    <li class="nav_item"><a href="./Paginas/services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
+                    <li class="nav_item"><a href="./Paginas/projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
+                    <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
+                    <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
+                    <button class="btn_idioma" id="btn_español">
+                        <span><img class="español_img" src="./img/flag3-spain-removebg-preview.png" alt="español"></span>
+                    </button>
+                </ul>
         </nav>
     </header>
     <main class="main_top english">
