--- a/Paginas/contact/thankyou.html
+++ b/Paginas/contact/thankyou.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+                <a href="../../index.html" class="logo link_logo"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
@@ -34,13 +34,13 @@
     <body>
         <header class="header spanish">
             <nav class="navbar">
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+                <a href="../../index.html" class="logo link_logo"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
-                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICIOS</a></li>
+                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACTO</a></li>
@@ -117,13 +117,13 @@
     <!-- INGLES -->
     <header class="header english">
         <nav class="navbar">
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+                <a href="../../index.html" class="logo link_logo"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
-                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICES</a></li>
+                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACT</a></li>
