--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -7,15 +7,14 @@
     <title>Ivana Guardamaña</title>
     <meta>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@100&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../scss/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="icon" href="../../img/Component 1.svg">
 </head>
-<body>
+<body onload="checkLanguage()">
     <header class="header spanish">
         <nav class="navbar">
             <div class="nav_responsive">
@@ -51,12 +50,12 @@
             <div class="form">
                 <form action="https://formsubmit.co/af19627c9822e2429bb6a6590ee31540" method="POST" class="contactForm" >
                     <div class="formGrid">
-                        <input type="hidden" name="_next" value="./thankyou.html">
                         <input type="text" name="name" placeholder="Nombre Completo"  class="form_name" required>
                         <input type="text" name="email" placeholder="Correo Electrónico" class="form_email" required>
                         <textarea name="message" class="form_message" placeholder="Escriba su mensaje" required></textarea>
                     </div>
                     <input type="submit" class="form_submit" value="ENVIAR">
+                    <input type="hidden" name="_next" value="./thankyou.html">
                 </form>
             </div>
         </section>
@@ -65,7 +64,7 @@
         <section class="contacto_footer">
             <h5>¡Contactame!</h5>
             <div class="buttons">
-                <ul class="footer_list">
+             <ul class="footer_list">
                     <li>
                         <i class="bi bi-whatsapp"></i> 
                     </li>
@@ -98,18 +97,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
@@ -164,9 +163,9 @@
     </main>
     <footer class="english_footer footer_form">
         <section class="contacto_footer">
-            <h5>Contact me!</h5>
+            <h5>Contact me</h5>
             <div class="buttons">
-                <ul class="footer_list">
+             <ul class="footer_list">
                     <li>
                         <i class="bi bi-whatsapp"></i> 
                     </li>
@@ -199,18 +198,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
