--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -7,15 +7,15 @@
     <title>Ivana Guardamaña</title>
     <meta>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../scss/styles.css">
+    <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
+    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="icon" href="../../img/Component 1.svg">
 </head>
-<body onload="checkStatusPro()">
+<body onload="checkStatusPro(); checkLanguage()">
     <header class="header spanish">
         <nav class="navbar">
             <div class="nav_responsive">
@@ -186,7 +186,7 @@
         </main>
         <footer class="spanish_footer">
             <section class="contacto_footer">
-                <h5>Contactame</h5>
+                <h5>¡Contactame!</h5>
                 <div class="buttons">
                  <ul class="footer_list">
                         <li>
@@ -202,13 +202,13 @@
                             <i class="bi bi-linkedin"></i>
                         </li>
                     </ul>
-                </div>
+                </div> 
                 <div class="mail_footer">
                     <p>Ivana.guardamagna@gmail.com</p>
                 </div>
                 <div class="location_footer">
                     <p>Neuquén Capital, Argentina</p>
-                </div> 
+                </div>
             </section>
             <section class="logo_footer">
                 <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
@@ -221,18 +221,18 @@
                 <ul class="design_list_resp">
                     <div class="design_resp1">
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                            <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                         </li>
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                            <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                         </li>
                     </div>
                     <div class="design_resp2">
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                            <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                         </li>
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                            <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                         </li>
                     </div>
                 </ul>
@@ -413,9 +413,9 @@
         </main> 
         <footer class="english_footer">
             <section class="contacto_footer">
-                <h5>Contact me!</h5>
+                <h5>Contact me</h5>
                 <div class="buttons">
-                    <ul class="footer_list">
+                 <ul class="footer_list">
                         <li>
                             <i class="bi bi-whatsapp"></i> 
                         </li>
@@ -448,18 +448,18 @@
                 <ul class="design_list_resp">
                     <div class="design_resp1">
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                            <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                         </li>
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                            <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                         </li>
                     </div>
                     <div class="design_resp2">
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                            <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                         </li>
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                            <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                         </li>
                     </div>
                 </ul>
@@ -467,7 +467,6 @@
         </footer>
         <!-- Js Funciones -->
     
-
     <script src="../../Javascript/main.js"></script>
     <script src="../../Javascript/projects.js"></script>
     </body>
