--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <title>Ivana Guardamaña</title>
     <meta>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
     
-    <link rel="stylesheet" href="./scss/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="img/Component 1.svg">
 </head>
-<body>
+<body onload="checkLanguage()">
     <!-- ESPAÑOL -->
     <header class="header spanish">
         <nav class="navbar">
@@ -117,7 +116,7 @@
         <section class="contacto_footer">
             <h5>¡Contactame!</h5>
             <div class="buttons">
-                <ul class="footer_list">
+             <ul class="footer_list">
                     <li>
                         <i class="bi bi-whatsapp"></i> 
                     </li>
@@ -150,18 +149,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
@@ -298,18 +297,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
