toques finales contact

--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -48,14 +48,16 @@
         </section>
         <section class="form__floatLeft">
             <div class="form">
-                <form action="https://formsubmit.co/af19627c9822e2429bb6a6590ee31540" method="POST" class="contactForm" >
+                <form action="https://formsubmit.co/ivana.guardamagna@gmail.com" method="POST" class="contactForm" >
+                    <input type="text" name="_honey" style="display: none;">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/Paginas/contact/thankyou.html">
                     <div class="formGrid">
                         <input type="text" name="name" placeholder="Nombre Completo"  class="form_name" required>
                         <input type="text" name="email" placeholder="Correo Electrónico" class="form_email" required>
                         <textarea name="message" class="form_message" placeholder="Escriba su mensaje" required></textarea>
                     </div>
                     <input type="submit" class="form_submit" value="ENVIAR">
-                    <input type="hidden" name="_next" value="./thankyou.html">
                 </form>
             </div>
         </section>
@@ -149,9 +151,11 @@
         </section>
         <section class="form__floatLeft">
             <div class="form">
-                <form action="https://formsubmit.co/af19627c9822e2429bb6a6590ee31540"  method="POST" class="contactForm" >
+                <form action="https://formsubmit.co/ivana.guardamagna@gmail.com"  method="POST" class="contactForm" >
+                    <input type="text" name="_honey" style="display: none;">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_next" value="thankyou.html">
                     <div class="formGrid">
-                        <input type="hidden" name="_next" value="./thankyou.html">
                         <input type="text" placeholder="Full Name"  class="form_name" name="name" required>
                         <input type="text" placeholder="Email" class="form_email" name="email" required>
                         <textarea class="form_message" placeholder="Write your message" required></textarea>
