--- a/Paginas/contact/thankyou.html
+++ b/Paginas/contact/thankyou.html
@@ -7,15 +7,13 @@
     <title>Ivana Guardamaña</title>
     <meta>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@100&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../scss/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
-<body>
+<body onload="checkLanguage()">
     <header class="header">
         <nav class="navbar">
                 <a href="../../index.html" class="logo link_logo"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
@@ -34,27 +32,31 @@
     <body>
         <header class="header spanish">
             <nav class="navbar">
-                <a href="../../index.html" class="logo link_logo"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
-                <button class="boton" id="boton_menu">
-                    <i class="bi bi-list"></i>
-                </button>    
-                    <ul class="navbarList nav_inactive" id="navbar">
-                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
-                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
-                        <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
-                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
-                        <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACTO</a></li>
-                        <button class="btn_idioma" id="btn_ingles">
-                            <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
-                        </button>
-                    </ul>   
-            </nav>
+                <div class="nav_responsive">
+                    <button class="boton" id="boton_menu">
+                        <i class="bi bi-list"></i>
+                    </button>
+                    <a href="../../index.html" class="logo link_logo">
+                        <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                        <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                    </a>  
+                </div>
+                        <ul class="navbarList nav_inactive" id="navbar">
+                            <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
+                            <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
+                            <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
+                            <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
+                            <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACTO</a></li>
+                            <button class="btn_idioma" id="btn_ingles">
+                                <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
+                            </button>
+                        </ul>   
+                </nav>
         </header>
-
         <main class="spanish contact">
             <section class="form__floatLeft">
-                <p class="pre-title">Tu mensaje ha sido enviado correctamente</p>
-                <h2 class="contactame">¡Gracias por ponerte en contacto!</h2>
+                <p class="pre-title">Tu mensaje ha sido enviado con éxito. Recibirá una respuesta apenas se pueda.</p>
+                <h2 class="contactame">¡Gracias por contactarte!</h2>
             </section>
             <section class="form__floatRight">
                 <img src="../../img/imgContact.svg" alt="" class="contactimg">
@@ -64,9 +66,9 @@
             <section class="contacto_footer">
                 <h5>¡Contactame!</h5>
                 <div class="buttons">
-                    <ul class="footer_list">
+                 <ul class="footer_list">
                         <li>
-                           <i class="bi bi-whatsapp"></i> 
+                            <i class="bi bi-whatsapp"></i> 
                         </li>
                         <li>
                             <i class="bi bi-envelope"></i>
@@ -97,102 +99,112 @@
                 <ul class="design_list_resp">
                     <div class="design_resp1">
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                            <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                         </li>
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                            <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                         </li>
                     </div>
                     <div class="design_resp2">
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                            <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                         </li>
                         <li>
-                            <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                            <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                         </li>
                     </div>
                 </ul>
             </section>
         </footer>
-    <!-- INGLES -->
-    <header class="header english">
-        <nav class="navbar">
-                <a href="../../index.html" class="logo link_logo"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
-                <button class="boton" id="boton_menu">
-                    <i class="bi bi-list"></i>
-                </button>    
-                    <ul class="navbarList nav_inactive" id="navbar">
-                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
-                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
-                        <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
-                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
-                        <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACT</a></li>
-                        <button class="btn_idioma" id="btn_español">
-                            <span><img class="español_img" src="../../img/flag3-spain-removebg-preview.png" alt="español"></span>
-                        </button>
-                    </ul>   
-            </nav>
-    </header>
-
-    <main class="spanish contact">
-        <section class="form__floatLeft">
-            <p class="pre-title">Your message has been delivered</p>
-            <h2 class="contactame">Thank you for contacting me!</h2>
-        </section>
-        <section class="form__floatRight">
-            <img src="../../img/imgContact.svg" alt="" class="contactimg">
-        </section>
-    </main>
-    <footer class="english_footer footer_form">
-        <section class="contacto_footer">
-            <h5>Contact me!</h5>
-            <div class="buttons">
-                <ul class="footer_list">
-                    <li>
-                        <i class="bi bi-whatsapp"></i> 
-                    </li>
-                    <li>
-                        <i class="bi bi-envelope"></i>
-                    </li>
-                    <li>
-                        <i class="bi bi-behance"></i>
-                    </li>
-                    <li>
-                        <i class="bi bi-linkedin"></i>
-                    </li>
+        <!-- INGLES -->
+        <header class="header english">
+            <nav class="navbar">
+                <div class="nav_responsive">
+                    <button class="boton" id="boton_menu">
+                        <i class="bi bi-list"></i>
+                    </button>
+                    <a href="../../index.html" class="logo link_logo">
+                        <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                        <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                    </a>  
+                </div>
+                        <ul class="navbarList nav_inactive" id="navbar">
+                            <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
+                            <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICES</a></li>
+                            <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
+                            <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
+                            <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu nav_linkMenu__active">CONTACT</a></li>
+                            <button class="btn_idioma" id="btn_español">
+                                <span><img class="español_img" src="../../img/flag3-spain-removebg-preview.png" alt="español"></span>
+                            </button>
+                        </ul>   
+                </nav>
+        </header>
+    
+        <main class="english contact">
+            <section class="form__floatLeft">
+                <p class="pre-title">Your message has been succesfully delivered. You will get an answer as soon as posible.</p>
+                <h2 class="contactame">Thanks for contacting me!</h2>
+            </section>
+            <section class="form__floatRight">
+                <img src="../../img/imgContact.svg" alt="" class="contactimg">
+            </section>
+        </main>
+        <footer class="english_footer footer_form">
+            <section class="contacto_footer">
+                <h5>Contact me</h5>
+                <div class="buttons">
+                 <ul class="footer_list">
+                        <li>
+                            <i class="bi bi-whatsapp"></i> 
+                        </li>
+                        <li>
+                            <i class="bi bi-envelope"></i>
+                        </li>
+                        <li>
+                            <i class="bi bi-behance"></i>
+                        </li>
+                        <li>
+                            <i class="bi bi-linkedin"></i>
+                        </li>
+                    </ul>
+                </div> 
+                <div class="mail_footer">
+                    <p>Ivana.guardamagna@gmail.com</p>
+                </div>
+                <div class="location_footer">
+                    <p>Neuquén Capital, Argentina</p>
+                </div>
+            </section>
+            <section class="logo_footer">
+                <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+            </section>
+            <button class="btn_responsive"></button>
+            <section class="design_footer">
+                <h5 class="title_footer1">Web Design:</h5>
+                <h5 class="title_footer2">Design & Development</h5>
+                <ul class="design_list_resp">
+                    <div class="design_resp1">
+                        <li>
+                            <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        </li>
+                        <li>
+                            <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        </li>
+                    </div>
+                    <div class="design_resp2">
+                        <li>
+                            <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        </li>
+                        <li>
+                            <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        </li>
+                    </div>
                 </ul>
-            </div> 
-            <div class="mail_footer">
-                <p>Ivana.guardamagna@gmail.com</p>
-            </div>
-            <div class="location_footer">
-                <p>Neuquén Capital, Argentina</p>
-            </div>
-        </section>
-        <section class="logo_footer">
-            <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
-            <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
-        </section>
-        <section class="design_footer">
-            <h5>Web Design:</h5>
-            <ul>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
-                </li>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
-
-                </li>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
-                </li>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
-                </li>
-            </ul>
-        </section>
-    </footer>
-
-    <!-- Js Funciones -->
-    <script src="../../Javascript/main.js"></script>
+            </section>
+        </footer>
+    
+        <!-- Js Funciones -->
+        <script src="../../Javascript/main.js"></script>
     </body>
