--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="keywords" content="diseño, estilo, ux, ui, branding, marketing, diseño digital, diseño web, marca, plataformas, estrategia, porfolio, ivana">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivana Guardamaña</title>
-    <meta>
+    <meta name="description" content="Mi nombre es Ivana, Soy diseñadora industrial y UX/UI. Mi perfil laboral lo fui desarrollando en el área del marketing y diseño digital. Donde encontré la manera de fusionar todo lo que más me apasiona hacer.">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
@@ -68,16 +69,16 @@
             <div class="buttons">
              <ul class="footer_list">
                     <li>
-                        <i class="bi bi-whatsapp"></i> 
+                        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
                     </li>
                     <li>
-                        <i class="bi bi-envelope"></i>
+                        <a href="../contact/contact.html"><i class="bi bi-envelope"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-behance"></i>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </li>
                 </ul>
             </div> 
@@ -99,18 +100,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
@@ -140,7 +141,6 @@
                     </ul>   
             </nav>
     </header>
-
     <main class="english contact">
         <section class="form__floatLeft">
             <p class="pre-title">Let's work together and enhace your business... Are you ready?</p>
@@ -171,16 +171,16 @@
             <div class="buttons">
              <ul class="footer_list">
                     <li>
-                        <i class="bi bi-whatsapp"></i> 
+                        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-envelope"></i>
+                        <a href="../contact/contact.html"><i class="bi bi-envelope"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-behance"></i>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </li>
                 </ul>
             </div> 
@@ -202,24 +202,23 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
         </section>
     </footer>
-
     <!-- Js Funciones -->
     <script src="../../Javascript/main.js"></script>
     </body>
