--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="keywords" content="diseño, estilo, ux, ui, branding, marketing, diseño digital, diseño web, marca, plataformas, estrategia, porfolio, ivana">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivana Guardamaña</title>
-    <meta>
+    <meta name="description" content="Mi nombre es Ivana, Soy diseñadora industrial y UX/UI. Mi perfil laboral lo fui desarrollando en el área del marketing y diseño digital. Donde encontré la manera de fusionar todo lo que más me apasiona hacer.">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
+    <link rel="stylesheet" href="./scss/styles.css">
     
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="img/Component 1.svg">
 </head>
 <body onload="checkLanguage()">
@@ -118,16 +119,16 @@
             <div class="buttons">
              <ul class="footer_list">
                     <li>
-                        <i class="bi bi-whatsapp"></i> 
+                        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
                     </li>
                     <li>
-                        <i class="bi bi-envelope"></i>
+                        <a href="./Paginas/contact/contact.html"><i class="bi bi-envelope"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-behance"></i>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </li>
                 </ul>
             </div> 
@@ -149,18 +150,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
@@ -266,16 +267,16 @@
             <div class="buttons">
              <ul class="footer_list">
                     <li>
-                        <i class="bi bi-whatsapp"></i> 
+                        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
                     </li>
                     <li>
-                        <i class="bi bi-envelope"></i>
+                        <a href="./Paginas/contact/contact.html"><i class="bi bi-envelope"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-behance"></i>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
                     </li>
                     <li>
-                        <i class="bi bi-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </li>
                 </ul>
             </div> 
@@ -297,18 +298,18 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/julieta-milito"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/brenda-zaya"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/leandrowaserman/"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
                     </li>
                 </div>
             </ul>
